<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

  	<LinearLayout
  	    android:layout_width="match_parent"
  	    android:layout_height="534dp"
  	    android:background="@color/bg_view1"
  	    android:orientation="vertical" >

  	    <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="80dp"
           android:background="@color/black_white" >

           <ImageView
               android:id="@+id/ivReturnedPic_l"
               android:layout_width="60dp"
               android:layout_height="70dp"
               android:layout_marginBottom="5dp"
               android:layout_marginLeft="10dp"
               android:layout_marginTop="5dp"
               android:background="@color/transparent"
               android:contentDescription="@string/Description_add"
               android:src="@drawable/add_image" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerVertical="true"
               android:layout_toRightOf="@+id/ivReturnedPic_l"
               android:gravity="center"
               android:textColor="@color/white"
               android:textSize="30sp"
               android:text="@string/new_user" />

       </RelativeLayout>

  	    <LinearLayout
  	        android:layout_width="match_parent"
  	        android:layout_height="1dp"
  	        android:background="@color/white"
  	        android:orientation="vertical" >
  	    </LinearLayout>

  	    <TextView
  	        android:layout_width="match_parent"
  	        android:layout_height="wrap_content"
  	        android:layout_marginLeft="16dp"
  	        android:layout_marginTop="10dp"
  	        android:text="@string/name"
  	        android:textColor="@color/white"
  	        android:textSize="7pt" />

  	    <EditText
  	            android:id="@+id/l_name"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:layout_marginLeft="15dp"
  	            android:hint="@string/name_label"
  	            android:layout_marginBottom="10dp"
  	            android:inputType="textCapWords" />
  	    
	<LinearLayout
  	        android:layout_width="match_parent"
  	        android:layout_height="1dp"
  	        android:background="@color/white"
  	        android:orientation="vertical" >
  	    </LinearLayout>
  	    <RelativeLayout
  	        android:layout_width="match_parent"
  	        android:layout_height="wrap_content"
  	        android:background="@color/bg_view1"
  	        android:orientation="vertical" >
  	        
		<TextView
		    android:id="@+id/lbl_login"
  	        android:layout_width="match_parent"
  	        android:layout_height="wrap_content"
  	        android:layout_marginLeft="16dp"
  	        android:layout_marginTop="10dp"
  	        android:text="@string/login_r"
  	        android:textColor="@color/white"
  	        android:textSize="7pt" />
		
		 <EditText
  	        android:id="@+id/l_login"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_marginLeft="15dp"
  	        android:layout_below="@+id/lbl_login"
  	        android:hint="@string/login" />
		 
		 <TextView
  	        android:id="@+id/lbl_pass"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_marginLeft="16dp"
  	        android:layout_marginTop="5dp"
  	        android:text="@string/pass_r"
  	        android:textColor="@color/white"
  	        android:layout_below="@+id/l_login"
  	        android:textSize="7pt" />

  	    <EditText
  	        android:id="@+id/l_pass"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_marginLeft="15dp"
  	        android:layout_below="@+id/lbl_pass"
  	        android:inputType="textPassword" />

  	    <TextView
  	        android:id="@+id/lbl_confirm_pass"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_marginLeft="16dp"
  	        android:layout_marginTop="5dp"
  	        android:text="@string/confirm_pass_r"
  	        android:layout_below="@+id/l_pass"
  	        android:textColor="@color/white"
  	        android:textSize="7pt" />

  	    <EditText
  	        android:id="@+id/l_confirm_pass"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_marginLeft="15dp"
  	        android:layout_below="@+id/lbl_confirm_pass"
  	        android:inputType="textPassword" />

  	    <ImageView
  	        android:id="@+id/l_valid_login"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_alignTop="@+id/l_login"
  	        android:layout_toRightOf="@+id/l_login"
  	        android:layout_marginLeft="10dp"
  	        android:contentDescription="@string/Description_add" />
  	    
  	    <ImageView
  	        android:id="@+id/l_valid_pass1"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_alignTop="@+id/l_pass"
  	        android:layout_toRightOf="@+id/l_pass"
  	        android:layout_marginLeft="10dp"
  	        android:contentDescription="@string/Description_add" />

  	    <ImageView
  	        android:id="@+id/l_valid_senha"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_alignTop="@+id/l_confirm_pass"
  	        android:layout_toRightOf="@+id/l_confirm_pass"
  	        android:layout_marginLeft="10dp"
  	        android:contentDescription="@string/Description_add" />

  	    </RelativeLayout>
  	    
  	    <LinearLayout
  	        android:layout_width="match_parent"
  	        android:layout_height="1dp"
  	        android:layout_marginTop="10dp"
  	        android:background="@color/white"
  	        android:orientation="vertical" >
  	    </LinearLayout>

  	    <RelativeLayout
  	        android:id="@+id/layout_add_teacher"
  	        android:layout_width="match_parent"
  	        android:layout_height="wrap_content"
  	        android:background="@color/bg_view1" >

  	        <TextView
  	            android:id="@+id/textView_address"
  	            android:layout_width="match_parent"
  	            android:layout_height="wrap_content"
  	            android:layout_marginLeft="16dp"
  	            android:layout_marginTop="5dp"
  	            android:text="@string/address"
  	            android:textColor="@color/white"
  	            android:textSize="7pt" />

  	        <TextView
  	            android:id="@+id/textView1"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:layout_below="@+id/textView_address"
  	            android:layout_marginLeft="16dp"
  	            android:layout_marginTop="5dp"
  	            android:text="@string/city"
  	            android:textColor="@color/white"
  	            android:textSize="6pt" />

  	        <EditText
  	            android:id="@+id/l_city"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:layout_alignParentLeft="true"
  	            android:layout_below="@+id/textView1"
  	            android:layout_marginLeft="15dp"
  	            android:ems="10"
  	            android:hint="@string/city"
  	            android:inputType="textCapWords" />

  	        <TextView
  	            android:id="@+id/textView2"
  	            android:layout_width="match_parent"
  	            android:layout_height="wrap_content"
  	            android:layout_below="@+id/textView_address"
  	            android:layout_marginLeft="6dp"
  	            android:layout_marginTop="5dp"
  	            android:layout_toRightOf="@+id/l_city"
  	            android:text="@string/state"
  	            android:textColor="@color/white"
  	            android:textSize="6pt" />

  	        <Spinner
  	            android:id="@+id/l_state"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:layout_below="@+id/textView2"
  	            android:layout_marginLeft="6dp"
  	            android:layout_marginRight="4dp"
  	            android:layout_toRightOf="@+id/l_city" />
  	    </RelativeLayout>

  	    <LinearLayout
  	        android:layout_width="match_parent"
  	        android:layout_height="1dp"
  	        android:layout_marginTop="5dp"
  	        android:background="@color/white"
  	        android:orientation="vertical" >
  	    </LinearLayout>

  	    <TextView
  	        android:layout_width="match_parent"
  	        android:layout_height="wrap_content"
  	        android:layout_marginLeft="16dp"
  	        android:layout_marginTop="10dp"
  	        android:text="@string/phone"
  	        android:textColor="@color/white"
  	        android:textSize="7pt" />

  	    <EditText
  	        android:id="@+id/l_phone"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_marginBottom="10dp"
  	        android:layout_marginLeft="15dp"
  	        android:hint="@string/phone_label"
  	        android:inputType="phone" />
	<LinearLayout
  	        android:layout_width="match_parent"
  	        android:layout_height="1dp"
  	        android:background="@color/white"
  	        android:orientation="vertical" >
  	    </LinearLayout>
  	    <RelativeLayout
  	        android:layout_width="match_parent"
  	        android:layout_height="wrap_content"
  	        android:background="@color/black_white" >

  	        <Button
  	            android:id="@+id/btn_return_l"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:layout_alignParentRight="true"
  	            android:layout_marginBottom="5dp"
  	            android:layout_marginRight="5dp"
  	            android:layout_marginTop="5dp"
  	            android:text="@string/s_return" />

  	        <Button
  	            android:id="@+id/btn_register_l"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:layout_alignParentLeft="true"
  	            android:layout_marginBottom="5dp"
  	            android:layout_marginLeft="5dp"
  	            android:layout_marginTop="5dp"
  	            android:text="@string/register" />
  	    </RelativeLayout>
  	</LinearLayout>
</ScrollView>